# MyVedioPlayer

./: CMakeLists.txt  MyVedioPlayer.cpp  MyVedioPlayer.h
